--- a/trunk/sysinfo/po/es/kio_sysinfo.po
+++ b/trunk/sysinfo/po/es/kio_sysinfo.po
@@ -1,18 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of kio_sysinfo.po to spanish
 # This file is put in the public domain.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Klemens Häckel <click3d_at_linuxmail_org>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: ksysinfo\n"
+"Project-Id-Version: kio_sysinfo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-01 16:28+0300\n"
-"PO-Revision-Date: 2006-11-26 14:22-0400\n"
-"Last-Translator: Klemens Häckel <click3d(.a)linuxmail.org>\n"
+"PO-Revision-Date: 2007-02-04 16:17+0200\n"
+"Last-Translator: Klemens Häckel <click3d_at_linuxmail_org>\n"
 "Language-Team: spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: ksysinfopart.cpp:72
 msgid "KSysinfo"
@@ -53,7 +54,7 @@ msgstr "Información de Sistema Operativo"
 
 #: sysinfo.cpp:115
 msgid "OS:"
-msgstr "Sistema Operativo"
+msgstr "Sistema Operativo:"
 
 #: sysinfo.cpp:116
 msgid "Current user:"
@@ -73,7 +74,7 @@ msgstr "Monitor"
 
 #: sysinfo.cpp:126
 msgid "Vendor:"
-msgstr "Vendedor:"
+msgstr "Fabricante:"
 
 #: sysinfo.cpp:127
 msgid "Model:"
@@ -85,7 +86,7 @@ msgstr "Driver:"
 
 #: sysinfo.cpp:136
 msgid "Getting OS information...."
-msgstr "Buscando información del SO...."
+msgstr "Obteniendo información del SO...."
 
 #: sysinfo.cpp:139
 msgid "Common Folders"
@@ -214,7 +215,7 @@ msgstr "Red <strong>inaccesible</strong>"
 
 #: sysinfo.cpp:493
 msgid "You are <strong>offline</strong>"
-msgstr "Estás <strong>sin conexion de red</strong>"
+msgstr "<strong>No hay </strong>conexion de red"
 
 #: sysinfo.cpp:495
 msgid "Network is <strong>shutting down</strong>"
@@ -226,7 +227,7 @@ msgstr "<strong>Estableciendo</strong> conexión de red"
 
 #: sysinfo.cpp:499
 msgid "You are <strong>online</strong>"
-msgstr "Estás <strong>en línea</strong>"
+msgstr "Estamos <strong>en línea</strong>"
 
 #: sysinfo.cpp:501
 msgid "Unknown network status"
