--- a/tasma/network-manager/po/de.po
+++ b/tasma/network-manager/po/de.po
@@ -1,17 +1,17 @@
-# translation of de.po to Deutsch
+# translation of de.po to
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Mustafa M. Ölcerman <oelcerman@fussballkreis.org>, 2006.
+# Mustafa Muhammed Ölcerman <oelcerman@fussballkreis.org>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-01-23 20:04+0200\n"
-"PO-Revision-Date: 2006-12-11 21:10+0200\n"
-"Last-Translator: Mustafa M. Ölcerman <oelcerman@fussballkreis.org>\n"
-"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-"
-"translation-de>\n"
+"PO-Revision-Date: 2007-02-08 16:03+0100\n"
+"Last-Translator: Mustafa Muhammed Ölcerman <oelcerman@fussballkreis.org>\n"
+"Language-Team:  <pardus-translation-de@liste.pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -197,11 +197,11 @@ msgstr "Hostname:"
 
 #: nameconf.py:56
 msgid "Up"
-msgstr ""
+msgstr "Hoch"
 
 #: nameconf.py:59
 msgid "Down"
-msgstr ""
+msgstr "Runter"
 
 #: nameconf.py:134
 msgid "Add Name Server"
@@ -233,8 +233,7 @@ msgstr "Netzwerk-Pakete installieren!"
 
 #: newconn.py:110
 msgid "No package with COMAR network scripts are installed yet."
-msgstr ""
-"Es ist noch kein Paket installiert um das Netzwerk über COMAR zu bilden."
+msgstr "Es ist noch kein Paket installiert um das Netzwerk über COMAR zu bilden."
 
 #: network-applet.py:293
 msgid "Firewall..."
@@ -254,9 +253,9 @@ msgstr "Einzelnes Icon"
 
 #: network-applet.py:341
 msgid "Should network-applet start automatically when you login?"
-msgstr ""
-"Soll der Netzwerk Applet automatisch bei der Anmeldung gestartet werden?"
+msgstr "Soll der Netzwerk Applet automatisch bei der Anmeldung gestartet werden?"
 
 #: network-applet.py:491
 msgid "Network Applet"
 msgstr "Netzwerk Applet"
+
