--- a/trunk/tasma/package-manager/po/es.po
+++ b/trunk/tasma/package-manager/po/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 16:20+0200\n"
-"PO-Revision-Date: 2007-02-04 14:28+0200\n"
+"PO-Revision-Date: 2007-02-10 08:49+0200\n"
 "Last-Translator: Klemens Häckel <click3d_at_linuxmail_org>\n"
 "Language-Team: spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -325,17 +325,15 @@ msgstr "El carrito está vacío."
 
 #: src/package-manager.py:437 src/package-manager.py:445
 msgid "Currently there are <b>%1</b> selected package(s) of total <b>%2</b> of size "
-msgstr ""
-"Actualmente hay <b>%1</b> paquetes seleccionados con un tamaño total de <b>%"
-"2</b>"
+msgstr "Actualmente hay <b>%1</b> paquetes seleccionados con un tamaño total de <b>%2</b>"
 
 #: src/package-manager.py:440
 msgid "with <b>%3</b> extra dependencies of total <b>%4</b> of size "
-msgstr "con <b>%3</b> dependencias adicionales requeridos con un tamaño total de <b>%4</b>"
+msgstr " más <b>%3</b> dependencias requeridos con un tamaño de <b>%4</b> adicional"
 
 #: src/package-manager.py:442 src/package-manager.py:450
 msgid "in your basket."
-msgstr "en el carrito."
+msgstr " en el carrito."
 
 # should this be the same as src/package-manager.py:416 ??
 #  if different, i am not sure what "reverse" means here (i haven't seen it running..)
