--- a/trunk/repokit/po/pt_BR.po
+++ b/trunk/repokit/po/pt_BR.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: pt_BR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-20 20:48+0200\n"
-"PO-Revision-Date: 2007-02-19 22:24-0300\n"
+"PO-Revision-Date: 2007-02-20 17:06-0300\n"
 "Last-Translator: Pedro Leite <pedro.leite@gmail.com>\n"
-"Language-Team: Brazilian Portuguese <http://liste.uludag.org.tr/mailman/"
-"listinfo/pardus-translation-ptbr>\n"
+"Language-Team: Brazilian Portuguese <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-ptbr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -224,7 +223,5 @@ msgstr ""
 
 #: src/repostats.py:627
 msgid "HTML output directory."
-msgstr ""
+msgstr "Diretório de saída do HTML."
 
-#~ msgid "Dont generate the web site.\n"
-#~ msgstr "Não gerar este web site.\n"
