--- a/feedback/po/nl.po
+++ b/feedback/po/nl.po
@@ -1,18 +1,18 @@
-# translation of Feedback Tool.po to Dutch
+# translation of nl.po to Nederlands
 # Pardus Feedback Tool
 # Copyright (C) 2005 TUBITAK/UEKAE
 #
 # Bahadır Kandemir <bahadir@haftalik.net>, 2005.
-# Willem Gielen <w.gielen@gmail.com>, 2006.
+# Willem Gielen <w.gielen@gmail.com>, 2006, 2007.
 # Rinse de Vries <rinsedevries@kde.nl>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: Feedback Tool\n"
+"Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-17 10:48+0200\n"
-"PO-Revision-Date: 2006-08-18 23:18+0200\n"
-"Last-Translator: Rinse de Vries <rinsedevries@kde.nl>\n"
-"Language-Team: Dutch <kde-i18n-nl@kde.org>\n"
+"PO-Revision-Date: 2007-02-20 21:31+0200\n"
+"Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
+"Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -111,7 +111,7 @@ msgid ""
 "(Ease of installation and use, capability of software,\n"
 "general quality, adoptability, suitability to requirements, etc)"
 msgstr ""
-"(Eenvoud qua installatie en gebruik, capaciteiten van de software,\n"
+"(Eenvoudig in installatie en gebruik, capaciteiten van de software,\n"
 "algehele kwaliteit, toepasbaarheid, tegemoetkoming aan de vereisten, etc)"
 
 #: src/opiniondlg.py:62
@@ -128,7 +128,7 @@ msgstr "Nieuwe gebruiker"
 
 #: src/experiencedlg.py:146
 msgid "Home/office productivity user"
-msgstr "Thuis/kantoorgebruiker"
+msgstr "Thuis- / kantoorgebruiker"
 
 #: src/experiencedlg.py:147
 msgid "Experienced user"
@@ -170,18 +170,17 @@ msgid ""
 msgstr ""
 "<h2>Welkom bij Pardus</h2>\n"
 "\n"
-"Met deze kleine assistent kunt u berichten versturen naar de \n"
+"Met deze kleine wizard kunt u berichten versturen naar de \n"
 "Pardus-ontwikkelaars en meehelpen om van Pardus de beste Linux in de wereld "
 "te maken.\n"
 "\n"
 "<p>\n"
-"De informatie die u verstrekt zal de ontwikkeling van Pardus doen "
-"versnellen. \n"
+"De informatie die u verstrekt zal de ontwikkeling van Pardus versnellen. \n"
 "Klik op de knop \"Verder\" voor de volgende stap. <p>"
 
 #: src/purposedlg.py:84
 msgid "Feedback wizard"
-msgstr "Feedbackassistent"
+msgstr "Feedback-assistent"
 
 #: src/purposedlg.py:86
 msgid "Daily use"
@@ -272,8 +271,7 @@ msgid "<font color=\"#ff0000\">Failed</font><br>\n"
 msgstr "<font color=\"#ff0000\">Mislukt</font><br>\n"
 
 #: src/feedback.py:244
-msgid ""
-"<font color=\"#ff0000\">Unable to connect feedback database.</font><br>\n"
+msgid "<font color=\"#ff0000\">Unable to connect feedback database.</font><br>\n"
 msgstr ""
 "<font color=\"#ff0000\">Kan geen verbinding maken met de feedback-database.."
 "</font><br>\n"
@@ -284,22 +282,22 @@ msgid ""
 "font><br>\n"
 msgstr ""
 "<font color=\"#ff0000\">Er is een probleem met de feedback. De gegevens zijn "
-"corrupt geraakt.</font><br>\n"
+"beschadigd.</font><br>\n"
 
 #: src/feedback.py:259
 msgid ""
 "<font color=\"#ff0000\">Server does not support this version. Please update "
 "feedback tool.</font><br>\n"
 msgstr ""
-"<font color=\"#ff0000\">De server ondersteunt deze versie niet. Update het "
-"Feedbackprogramma.</font><br>\n"
+"<font color=\"#ff0000\">De server ondersteunt deze versie niet. Werk het "
+"Feedbackprogramma bij.</font><br>\n"
 
 #: src/feedback.py:261
 msgid ""
 "<font color=\"#ff0000\">Feedback seems to be broken. Data is missing.</"
 "font><br>\n"
 msgstr ""
-"<font color=\"#ff0000\">Er is een probleem met de feedback. De gegevens "
+"<font color=\"#ff0000\">Er is een probleem met feedback. De gegevens "
 "ontbreken.</font><br>\n"
 
 #: src/feedback.py:263
@@ -316,7 +314,7 @@ msgstr "<font color=\"#ff0000\">Feedback-database bevat fouten</font><br>\n"
 
 #: src/feedback.py:286
 msgid "Feedback tool is already running!"
-msgstr "Feedbackprogramma is reeds opgestart"
+msgstr "Feedbackprogramma is al opgestart!"
 
 #: src/upload.py:246
 msgid "<h2>Upload</h2>"
@@ -333,7 +331,8 @@ msgid ""
 "announces."
 msgstr ""
 "<h2>Uw persoonlijke gegevens (optioneel)</h2>\n"
-"U kunt uw e-mail adres doorgeven voor onze nieuwsbrief."
+"U kunt uw e-mail adres doorgeven voor \n"
+"aankondigingen."
 
 #: src/personalinfodlg.py:248
 msgid "E-mail:"
@@ -341,14 +340,9 @@ msgstr "E-mail:"
 
 #: src/personalinfodlg.py:249
 msgid "Add me to your Pardus announce list"
-msgstr "Voeg me aan de Pardus-nieuwsbrief toe"
+msgstr "Voeg me aan de Pardus aankondigingenlijst toe"
 
 #: src/personalinfodlg.py:251
 msgid "<b>Step 6 of 7</b>"
 msgstr "<b>Stap 6 van 7</b>"
 
-#~ msgid "Alt+D"
-#~ msgstr "Alt+D"
-
-#~ msgid "Feedback"
-#~ msgstr "Feedback"
