--- a/tasma/package-manager/po/nl.po
+++ b/tasma/package-manager/po/nl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 16:20+0200\n"
-"PO-Revision-Date: 2007-02-18 03:11+0200\n"
+"PO-Revision-Date: 2007-02-25 20:39+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
 "Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
@@ -54,7 +54,7 @@ msgstr "Alles"
 
 #: src/Tray.py:64
 msgid "There are <b>%1</b> updates available!"
-msgstr "Er zijn <b>%1</b> bijgewerkte pakketten beschikbaar!"
+msgstr "Er zijn <b>%1</b> updates beschikbaar!"
 
 #: src/CustomEventListener.py:47 src/CustomEventListener.py:51
 #: src/package-manager.py:299
@@ -67,7 +67,7 @@ msgstr "Keer pakketselectie om"
 
 #: src/BalloonMessage.py:44
 msgid "Show Updates"
-msgstr "Toon bijgewerkte pakketten"
+msgstr "Toon updates"
 
 #: src/BalloonMessage.py:45
 msgid "Ignore"
@@ -131,7 +131,7 @@ msgstr ""
 
 #: src/BasketDialog.py:69
 msgid "Selected package(s) for upgrade:"
-msgstr "Geselecteerde bij te werken pakket(ten):"
+msgstr "Geselecteerde op te waarderen pakket(ten):"
 
 #: src/BasketDialog.py:70
 msgid ""
@@ -147,7 +147,7 @@ msgstr "Totale grootte:"
 
 #: src/BasketDialog.py:85
 msgid "Update Basket"
-msgstr "Werk mandje bij"
+msgstr "Mandje bijwerken"
 
 #: src/BasketDialog.py:161
 msgid "Total Size: <b>%1</b>"
@@ -223,7 +223,7 @@ msgstr "%1 / %2 pakket %3"
 
 #: src/Commander.py:64
 msgid "Can't connect to Comar daemon"
-msgstr "Kan geen verbinding maken met de Comar dienst"
+msgstr "Kan geen verbinding maken met Comar"
 
 #: src/Commander.py:99
 msgid "You do not have permission to do this operation."
@@ -451,11 +451,11 @@ msgstr "downloaden"
 
 #: src/package-manager.py:741 src/package-manager.py:836
 msgid "<b>Updating Repository</b>"
-msgstr "<b>Bijwerken repository</b>"
+msgstr "<b>Updaten repository</b>"
 
 #: src/package-manager.py:742
 msgid "Downloading package list of %1"
-msgstr "Downloaden lijst met pakketten van %1"
+msgstr "Downloaden pakketlijst van %1"
 
 #: src/package-manager.py:752
 msgid "Confirm"
