--- a/trunk/comar/comar/po/nl.po
+++ b/trunk/comar/comar/po/nl.po
@@ -1,21 +1,21 @@
-# translation of comar.po to Nederlands
+# translation of nl.po to Nederlands
 # COMAR - Configuration Manager.
 # Copyright (C) 2006 TUBITAK/UEKAE
 # This file is distributed under the same license as the COMAR package.
 #
-# Willem Gielen <w.gielen@gmail.com>, 2006.
+# Willem Gielen <w.gielen@gmail.com>, 2006, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: comar\n"
+"Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-07 09:56+0300\n"
-"PO-Revision-Date: 2006-09-10 21:15+0300\n"
+"PO-Revision-Date: 2007-02-25 21:19+0200\n"
 "Last-Translator: Willem Gielen <w.gielen@gmail.com>\n"
-"Language-Team: Nederlands <en@li.org>\n"
+"Language-Team: Nederlands <Pardus-translation-nl@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: src/main.c:77
 msgid "This program is a system service and should not be started by users."
@@ -61,6 +61,6 @@ msgstr ""
 "Copyright (c) 2005-2006, TUBITAK/UEKAE\n"
 "Dit programma is vrije software; u kan het opnieuw verspreiden en/of aanpassen\n "
 "onder de toepassingen van de GNU algemene publieke voorwaarden als gepubliceerd\n"
-"door de Free Software Foundation; ofwel versie 2 van de licentie, ofwel een latere\n"
+"door de Free Software Foundation; ofwel versie 2 van de licentie, ofwel (indien u wenst) een latere\n"
 "versie.\n"
 
